<?xml version="1.0"?>
<package format="3">
  <name>vms_msgs</name>
  <version>1.0.0</version>
  <description>Messages, action and service files for the VMS stack</description>
  <maintainer email="mabdulahmed02@gmail.com">Maaz Ahmed</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>nav_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

